--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-    "name": "BrowserQuest"
-  , "version": "0.0.1"
-  , "private": false 
-  , "dependencies": {
-    "underscore": ">0"
-    , "log": ">0"
-    , "bison": ">0"
-    , "websocket": ">0"
-    , "websocket-server": ">0"
-    , "sanitizer": ">0"
-    , "memcache": ">0"
+  "name": "BrowserQuest",
+  "version": "0.0.1",
+  "private": false,
+  "dependencies": {
+    "bison": "^1.1.1",
+    "log": "^6.0.0",
+    "memcache": "^0.3.0",
+    "sanitizer": "^0.1.3",
+    "socket.io": "^2.3.0",
+    "underscore": "^1.10.2"
   }
 }
