--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bison": "^1.1.1",
     "log": "^6.0.0",
     "memcache": "^0.3.0",
+    "memcached": "^2.2.2",
     "sanitizer": "^0.1.3",
     "socket.io": "^2.3.0",
     "underscore": "^1.10.2"
