--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "BrowserQuest",
+  "name": "@inbreakable/browser-quest",
   "version": "0.0.1",
   "private": false,
   "type": "module",
   "dependencies": {
-    "bison": "^1.1.1",
     "log": "^6.0.0",
-    "memcache": "^0.3.0",
     "memcached": "^2.2.2",
     "sanitizer": "^0.1.3",
     "socket.io": "^2.3.0",
