--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,19 +5,20 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Server",
+      "program": "${workspaceFolder}/server/ts/index.ts",
+      "skipFiles": ["<node_internals>/**"],
+      "preLaunchTask": "npm: build - server",
+      "outFiles": ["${workspaceFolder}/server/dist/**/*.js"]
+    },
+    {
       "type": "chrome",
       "request": "launch",
       "name": "Client",
       "url": "http://localhost:5500/client",
       "webRoot": "${workspaceFolder}"
-    },
-
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Server",
-      "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}/server/js/main.js"
     }
   ],
   "compounds": [
